# Spectral-3D

./: .gitmodules  CMakeLists.txt  Makefile  Open_questions.txt  README.md  build.conf  m_aux_phys.f90  m_aux_spect.f90  m_core_calc.f90  m_equations_terms.f90  m_glob_params.f90  m_initial_cond.f90  m_io.f90  m_utils.f90  main.f90
dependencies/: external_libs.mk
src/: gen-deps.awk  m_aux_phys.f90  m_aux_spect.f90  m_core_calc.f90  m_equations_terms.f90  m_glob_params.f90  m_initial_cond.f90  m_io.f90  m_utils.f90  main.f90
